apps/forgejo/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: forgejo
spec:
  gatewayClassName: forgejo
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: forgejo-i-shikanime-studio-tls
            group: ""
            kind: Secret
    - name: tcp-22
      port: 22
      protocol: TCP
