apps/forgejo/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - forgejo.i.shikanime.studio
  parentRefs:
    - name: forgejo
      sectionName: https
  rules:
    - backendRefs:
        - name: forgejo
          port: http
