apps/forgejo/overlays/nishir-tailnet/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - forgejo.i.shikanime.studio
  parentRefs:
    - name: forgejo
      sectionName: https
